--- a/volumes/volume1/pom.xml
+++ b/volumes/volume1/pom.xml
@@ -171,7 +171,7 @@
             <version>1.6.0</version>
             <configuration>
                <executable>/Applications/XEP/xep</executable>
-               <workingDirectory>${project.basedir}/src/main/resources/content/</workingDirectory>
+               <workingDirectory>${project.basedir}/src/docbkx</workingDirectory>
                <successCodes>0,1</successCodes>
                <arguments>
                   <argument>-fo</argument>
