parent pom &  child modules,vol-chapt update

--- a/pom.xml
+++ b/pom.xml
@@ -293,6 +293,7 @@
    </reporting>
   <modules>
      <module>book</module>
+     <module>book/chapter1</module>
      <module>volume1</module>
      <module>volume1/chapter1</module>
      <module>doc-logging</module>
