--- a/volume3-IKM-Overview/pom.xml
+++ b/volume3-IKM-Overview/pom.xml
@@ -6,8 +6,8 @@
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>volume1</artifactId>
-   <name>volume1</name>
+   <artifactId>volume3-ikm-overview</artifactId>
+   <name>volume3-ikm-overview</name>
    <description>Description of Volumes models for Analysis Normal Form and Clinical Input Form</description>
    <packaging>pom</packaging>
    <!-- <profiles>
