--- a/volume10-Patient-Data-Privacy/pom.xml
+++ b/volume10-Patient-Data-Privacy/pom.xml
@@ -6,8 +6,8 @@
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>volume1</artifactId>
-   <name>volume1</name>
+   <artifactId>volume10-patient-data-privacy</artifactId>
+   <name>volume10-patient-data-privacy</name>
    <description>Description of Volumes models for Analysis Normal Form and Clinical Input Form</description>
    <packaging>pom</packaging>
    <!-- <profiles>
