--- a/volume11-Healthcare-Data-Management/pom.xml
+++ b/volume11-Healthcare-Data-Management/pom.xml
@@ -6,8 +6,8 @@
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>volume1</artifactId>
-   <name>volume1</name>
+   <artifactId>volume11-healthcare-data-management</artifactId>
+   <name>volume11-healthcare-data-management</name>
    <description>Description of Volumes models for Analysis Normal Form and Clinical Input Form</description>
    <packaging>pom</packaging>
    <!-- <profiles>
