--- a/volume12-Healthcare-Quality-Improvement/pom.xml
+++ b/volume12-Healthcare-Quality-Improvement/pom.xml
@@ -6,8 +6,8 @@
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>volume1</artifactId>
-   <name>volume1</name>
+   <artifactId>volume12-healthcare-quality-improvement</artifactId>
+   <name>volume12-healthcare-quality-improvement</name>
    <description>Description of Volumes models for Analysis Normal Form and Clinical Input Form</description>
    <packaging>pom</packaging>
    <!-- <profiles>
