pom file update

--- a/volume13-Global-Health-International-Collaboration/pom.xml
+++ b/volume13-Global-Health-International-Collaboration/pom.xml
@@ -6,24 +6,10 @@
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>volume13</artifactId>
-   <name>volume13</name>
+   <artifactId>volume13-global-health-international-collaborations</artifactId>
+   <name>volume13-global-health-international-collaborations</name>
    <description>Description of Volumes models for Analysis Normal Form and Clinical Input Form</description>
    <packaging>pom</packaging>
-   <!-- <profiles>
-      <profile>
-         <id>volume1</id>
-         <properties>
-      <docbook.root>Volume 1 - Introduction.xml</docbook.root>
-   </properties>
-      </profile>
-      <profile>
-         <id>volume2</id>
-         <properties>
-      <docbook.root>Volume 2 - Background.xml</docbook.root>
-   </properties>
-      </profile>
-   </profiles> -->
    <properties>
       <!-- <docbook.root>End-of-Year Report.xml</docbook.root> -->
       <docbook.root>${docbook.name}</docbook.root>
