--- a/volume14-Emergency-Preparedness/pom.xml
+++ b/volume14-Emergency-Preparedness/pom.xml
@@ -6,24 +6,10 @@
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>volume14</artifactId>
-   <name>volume14</name>
+   <artifactId>volume14-emergency-preparedness</artifactId>
+   <name>volume14-emergency-preparedness</name>
    <description>Description of Volumes models for Analysis Normal Form and Clinical Input Form</description>
    <packaging>pom</packaging>
-   <!-- <profiles>
-      <profile>
-         <id>volume1</id>
-         <properties>
-      <docbook.root>Volume 1 - Introduction.xml</docbook.root>
-   </properties>
-      </profile>
-      <profile>
-         <id>volume2</id>
-         <properties>
-      <docbook.root>Volume 2 - Background.xml</docbook.root>
-   </properties>
-      </profile>
-   </profiles> -->
    <properties>
       <!-- <docbook.root>End-of-Year Report.xml</docbook.root> -->
       <docbook.root>${docbook.name}</docbook.root>
