--- a/volume15-return-investment/pom.xml
+++ b/volume15-return-investment/pom.xml
@@ -6,8 +6,8 @@
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>volume15</artifactId>
-   <name>volume15</name>
+   <artifactId>volume15-return-investment</artifactId>
+   <name>volume15-return-investment</name>
    <description>Description of Volumes models for Analysis Normal Form and Clinical Input Form</description>
    <packaging>pom</packaging>
    <!-- <profiles>
