--- a/volume16-Temporal-Relationships/pom.xml
+++ b/volume16-Temporal-Relationships/pom.xml
@@ -6,8 +6,8 @@
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>volume16</artifactId>
-   <name>volume16</name>
+   <artifactId>volume16-temporal-relationships</artifactId>
+   <name>volume16-temporal-relationships</name>
    <description>Description of Volumes models for Analysis Normal Form and Clinical Input Form</description>
    <packaging>pom</packaging>
    <!-- <profiles>
