--- a/volume5-Knowledge-Layers/pom.xml
+++ b/volume5-Knowledge-Layers/pom.xml
@@ -6,8 +6,8 @@
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>volume5</artifactId>
-   <name>volume5</name>
+   <artifactId>volume5-knowledge-layers</artifactId>
+   <name>volume5-knowledge-layers</name>
    <description>Description of Volumes models for Analysis Normal Form and Clinical Input Form</description>
    <packaging>pom</packaging>
    <!-- <profiles>
