--- a/volume9-Wisdom-of-Crowds/pom.xml
+++ b/volume9-Wisdom-of-Crowds/pom.xml
@@ -6,8 +6,8 @@
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>volume9</artifactId>
-   <name>volume9</name>
+   <artifactId>volume9-wisdom-of-crowds</artifactId>
+   <name>volume9-wisdom-of-crowds</name>
    <description>Description of Volumes models for Analysis Normal Form and Clinical Input Form</description>
    <packaging>pom</packaging>
    <!-- <profiles>
