--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,23 +1,58 @@
-name: Build Workflow
+name: DocBook Build
 
-run-name: 'Build Workflow -- ${{ github.head_ref || github.ref_name }}'
+run-name: DocBook Build -- ${{ github.event.inputs.module }} -- ${{github.ref_name || github.head_ref}} 
 
 on:
-  workflow_dispatch:
+#  push:
+#  pull_request:
+ workflow_dispatch:
+  inputs:
+    module:
+      description: 'choose modules to build'
+      required: true
+      type: choice
+      options:
+        - book
+        - volume1-Introduction
+        - volume2-Background
+        - volume3-IKM-Overview
+        - volume4-Tinkar-Ballot
+        - volume5-Knowledge-Layers
+        - volume6-ANF-Ballot
+        - volume7-Use-Cases
+        - volume8-Komet-User-Guide
+        - volume9-Wisdom-of-Crowds
+        - volume10-Patient-Data-Privacy
+        - volume11-Healthcare-Data-Management
+        - volume12-Healthcare-Quality-Improvement
+        - volume13-Global-Health-International-Collaboration
+        - volume14-Emergency-Preparedness
+        - volume15-Return-Investment
+        - volume16-Temporal-Relationships
 
-env:
-  BRANCH_NAME: ${{github.ref_name}}
 
 jobs:
   build-job:
-    name: Build Job
+    name: Build Job -- ${{ github.event.inputs.module }}
     runs-on: ubuntu-24.04
     steps:
-      - uses: actions/setup-java@v4
+      - name: checkout repo
+        uses: actions/checkout@v4
+
+      - name: install java
+        uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'zulu'
-      - name: Build IKMDEV Code
-        uses: ikmdev/maven-clean-install-build-action@main
+         distribution: 'zulu' # See 'Supported distributions' for available options
+         java-version: '23'
+
+      - name: Build Selected Module -- ${{ github.event.inputs.module }}
+        run: |
+          echo "Building module: ${{ github.event.inputs.module }}"
+          mvn clean install -U -D'maven.build.cache.enabled=false' -D'module-name=${{ github.event.inputs.module }}'
+
+      - name: upload Generated PDF -- ${{ github.event.inputs.module }}
+        uses: actions/upload-artifact@v4
         with:
-          branch_name: ${{env.BRANCH_NAME}}
+         name: ${{ github.event.inputs.module }}-pdf
+         path: ${{ github.event.inputs.module }}/target/site/docbook/*.pdf
+       
