--- a/volume4-Tinkar-Ballot/pom.xml
+++ b/volume4-Tinkar-Ballot/pom.xml
@@ -26,7 +26,7 @@
    </profiles> -->
    <properties>
       <!-- <docbook.root>End-of-Year Report.xml</docbook.root> -->
-      <docbook.root>${docbook.name}</docbook.root>
+      <docbook.root>The Book.xml</docbook.root>
    </properties>
    <dependencies>
       <dependency>
